# KonfiguratorFuerOSMDaten

./: .coveragerc  .gitignore  Kodt.tex  LICENSE  PSE.yml  Pflichtenheft.tex  README.md  README.rst  definitions.py  enviroment.yml  main.tex  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: tests.yml
Entwurfsheft/: Entwurfsheft.tex
Entwurfsheft/Entwurfsheft_code_documentation/: konfiguratorfrosm-datenaufbereitungs-prozesse.fdb_latexmk  konfiguratorfrosm-datenaufbereitungs-prozesse.fls  konfiguratorfrosm-datenaufbereitungs-prozesse.idx  konfiguratorfrosm-datenaufbereitungs-prozesse.ilg  konfiguratorfrosm-datenaufbereitungs-prozesse.tex  konfiguratorfrosm-datenaufbereitungs-prozesse.toc
Entwurfsheft/Entwurfsheft_full/: a_generated_enwurfsheft.tex  konfiguratorfrosm-datenaufbereitungs-prozesse.aux  konfiguratorfrosm-datenaufbereitungs-prozesse.fdb_latexmk  konfiguratorfrosm-datenaufbereitungs-prozesse.ind  konfiguratorfrosm-datenaufbereitungs-prozesse.out
Entwurfsheft/Entwurfsheft_misc/: Entwurfsheft.tex
Entwurfsheft2/: generated_document.tex
Implementierungsplan/: Implementierungsplan.tex
data/: info_on_the_creation_of_the_key_list.md  most_used_keys.csv  partOfKarlsruhe.geojson
docs/: .gitignore
pythoncode/: .gitignore  README.md  enviroment2.yml  environment.yml  pyproject.toml  requirement.yml  requirements.txt  requirements_dev.txt  tox.ini
src/: README.md  README.rst
src_tests/: definitions.py  example_google_docString.py
tests/: definitions.py  test_helloWorld.py  test_letUsPray.py
(+522 files in other folders)
